<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/objectUnitListFragment"-->
<!--            android:title="@string/objectunit_menu" />-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/calculateSalaryFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/settingsMenuFragment"
            android:icon="@drawable/baseline_ad_units_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/baseline_info_24"
            android:onClick="showAboutPopup"
            android:title="@string/about" />

    </group>
</menu>