<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_objects"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.InputObjectsFragment">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="@string/address"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="141dp"
        android:layout_height="30dp"
        android:layout_marginBottom="1dp"
        android:text="@string/city"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="141dp"
        android:layout_height="30dp"
        android:text="@string/buildings"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextBuildings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity" />

    <EditText
        android:id="@+id/editTextEntrance"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.995"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <EditText
        android:id="@+id/editTextBuildings"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="141dp"
        android:layout_height="30dp"
        android:text="@string/street"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextStreet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="141dp"
        android:layout_height="30dp"
        android:text="@string/entrance"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextEntrance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextStreet" />

    <TextView
        android:id="@+id/textViewTypeOfLiftOrElevator"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/typeOfObjectLiftOrElevator"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBuildings"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/typeOfObject"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBuildings"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/parkingAvailability"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBuildings"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/countNumberOfFloorsOfObject"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.102"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBuildings"
        app:layout_constraintVertical_bias="0.205" />

    <Button
        android:id="@+id/buttonAddObject"
        android:layout_width="146dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/custom_button"
        android:text="Сохранить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />

    <Spinner
        android:id="@+id/spinnerTypeOfObjectUnit"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:entries="@array/typeOfObjectUnitArray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntrance"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnertypeOfObject"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:clickable="false"
        android:entries="@array/typeOfObjectArrayIfAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntrance"
        app:layout_constraintVertical_bias="0.018" />

    <Spinner
        android:id="@+id/spinnerParkingAvailability"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginTop="168dp"
        android:entries="@array/parkingAvailabilityArray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntrance"
        app:layout_constraintVertical_bias="0.022" />

    <Spinner
        android:id="@+id/spinnerCountNumberOfFloorsObject"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginTop="118dp"
        android:entries="@array/countNumberOfFloorsOfObjectArray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEntrance"
        app:layout_constraintVertical_bias="0.028" />

</androidx.constraintlayout.widget.ConstraintLayout>